// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

\\"no-deps@npm:*\\":
<<<<<<< HEAD
  version: 1.0.0
  resolution: \\"no-deps@npm:1.0.0\\"
  checksum: <checksum stripped>
=======
  version: 2.0.0
  resolution: \\"no-deps@npm:2.0.0\\"
  checksum: <checksum stripped>
>>>>>>> 2.0.0
  languageName: node
  linkType: hard

\\"root-workspace-0b6124@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"root-workspace-0b6124@workspace:.\\"
  dependencies:
    no-deps: \\"*\\"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
[
  'no-deps@npm:2.0.0',
  '/private/var/folders/2s/1qvdx9f97plgcgy4r6mr26x80000gn/T/xfs-af82d484/.yarn/cache/no-deps-npm-2.0.0-8c4f3f8395-108623ba32.zip',
  '3/108623ba32cf1b5034a657f60dfa1f52b0f0014ed4de597a2f580be934b844304c19b91af8072ae82b1f4f8baa5605d1166678d20a46558442239b0747f0e110'
]
➤ YN0019: │ no-deps-npm-1.0.0-cf533b267a-492bfce9ad.zip appears to be unused - removing
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
[
  'no-deps@npm:2.0.0',
  '/private/var/folders/2s/1qvdx9f97plgcgy4r6mr26x80000gn/T/xfs-af82d484/.yarn/cache/no-deps-npm-2.0.0-8c4f3f8395-108623ba32.zip',
  '3/108623ba32cf1b5034a657f60dfa1f52b0f0014ed4de597a2f580be934b844304c19b91af8072ae82b1f4f8baa5605d1166678d20a46558442239b0747f0e110'
]
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 1`] = `
"# This file is generated by running \\"yarn install\\" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: 4

<<<<<<< HEAD
no-deps@*:
  version \\"2.0.0\\"
  resolved \\"http://localhost:64572/no-deps/-/no-deps-2.0.0.tgz#f3b8f24d76b21b04748e6888672752b872236fa7\\"
  integrity sha1-87jyTXayGwR0jmiIZydSuHIjb6c=
=======
\\"no-deps@npm:*\\":
  version: 2.0.0
  resolution: \\"no-deps@npm:2.0.0\\"
  checksum: <checksum stripped>
  languageName: node
  linkType: hard

\\"root-workspace-0b6124@workspace:.\\":
  version: 0.0.0-use.local
  resolution: \\"root-workspace-0b6124@workspace:.\\"
  dependencies:
    no-deps: \\"*\\"
  languageName: unknown
  linkType: soft
>>>>>>> yarn2
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
[
  'no-deps@npm:2.0.0',
  '/private/var/folders/2s/1qvdx9f97plgcgy4r6mr26x80000gn/T/xfs-3519ea6a/.yarn/cache/no-deps-npm-2.0.0-8c4f3f8395-108623ba32.zip',
  '3/108623ba32cf1b5034a657f60dfa1f52b0f0014ed4de597a2f580be934b844304c19b91af8072ae82b1f4f8baa5605d1166678d20a46558442239b0747f0e110'
]
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
[
  'no-deps@npm:2.0.0',
  '/private/var/folders/2s/1qvdx9f97plgcgy4r6mr26x80000gn/T/xfs-3519ea6a/.yarn/cache/no-deps-npm-2.0.0-8c4f3f8395-108623ba32.zip',
  '3/108623ba32cf1b5034a657f60dfa1f52b0f0014ed4de597a2f580be934b844304c19b91af8072ae82b1f4f8baa5605d1166678d20a46558442239b0747f0e110'
]
➤ YN0000: └ Completed
➤ YN0000: Done
",
}
`;
